network.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Network Infrastructure provisioning by Sabata

Parameters:
  EnvironmentName:
    Description: the env name that will be prefixed for resources.
    Type: String

  VpcCIDR:
    Description: Please enter the IP range.
    Type: String
    Default: 10.10.0.0/16

  PublicSubnet1CIDR:
    Description: please enter the IP range (CIDR notation) for this subnet.
    Type: String
    Default: 10.10.0.0/24

  PublicSubnet2CIDR:
    Description: please enter the IP range (CIDR notation) for this subnet.
    Type: String
    Default: 10.10.1.0/24

  PrivateSubnet1CIDR:
    Description: please enter the IP range (CIDR notation) for this subnet.
    Type: String
    Default: 10.10.2.0/24

  PrivateSubnet2CIDR:
    Description: please enter the IP range (CIDR notation) for this subnet.
    Type: String
    Default: 10.10.3.0/24

Resources:
  #Configuring the VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Project
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Project
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway01:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet01

  NatGateway02:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet02

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Public Route Table

  #The routing rules.
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet01

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet02

  # Route Table for private subnet 1
  PrivateRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Private Route Table 1

  DefaultPrivateRoute01:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      SubnetId: !Ref PrivateSubnet01

  # Route Table for private subnet 2
  PrivateRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Project
          Value: !Sub ${EnvironmentName} Private Route Table 2

  DefaultPrivateRoute02:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      SubnetId: !Ref PrivateSubnet02

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${EnvironmentName}-VPCID

  VPCPublicRouteTable:
    Description: Public Routing
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${EnvironmentName}-PUB-RT

  VPCPrivateRouteTable01:
    Description: Private Routing AZ1
    Value: !Ref PrivateRouteTable01
    Export:
      Name: !Sub ${EnvironmentName}-PRI1-RT

  VPCPrivateRouteTable02:
    Description: Private Routing AZ2
    Value: !Ref PrivateRouteTable02
    Export:
      Name: !Sub ${EnvironmentName}-PRI2-RT

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [",", [!Ref PublicSubnet01, !Ref PublicSubnet02]]
    Export:
      Name: !Sub ${EnvironmentName}-PUB-NETS

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [",", [!Ref PrivateSubnet01, !Ref PrivateSubnet02]]
    Export:
      Name: !Sub ${EnvironmentName}-PRIV-NETS

  PublicSubnet01:
    Description: A reference to the public subnet in the 1st AZ
    Value: !Ref PublicSubnet01
    Export:
      Name: !Sub ${EnvironmentName}-SUB1-SN

  PublicSubnet02:
    Description: A reference to the public subnet in the 2nd AZ
    Value: !Ref PublicSubnet02
    Export:
      Name: !Sub ${EnvironmentName}-SUB2-SN

  PrivateSubnet01:
    Description: A reference to the private subnet in the 1st AZ
    Value: !Ref PrivateSubnet01
    Export:
      Name: !Sub ${EnvironmentName}-PRI1-SN

  PrivateSubnet02:
    Description: A reference to the private subnet in the 2nd AZ
    Value: !Ref PrivateSubnet02
    Export:
      Name: !Sub ${EnvironmentName}-PRI2-SN
